--- a/Extent.html
+++ b/Extent.html
@@ -54,7 +54,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Mar 12, 2022 07:26:46 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Mar 14, 2022 12:25:58 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -69,8 +69,7 @@
 				<i class='material-icons'>warning</i> Status
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
-										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
-					<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
+										<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -123,10 +122,10 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='50%'><span class='strong'>1</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='50%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
+                    <span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
                 </div>
             </div>
         </div>
@@ -147,14 +146,14 @@
 				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Verify_SignUp_And_Onboard</span>
-						<span class='test-time'>Mar 12, 2022 07:26:46 PM</span>
+						<span class='test-time'>Mar 14, 2022 12:25:58 PM</span>
 						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Mar 12, 2022 07:26:46 PM</span>
-	<span class='label end-time'>Mar 12, 2022 07:32:19 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 5m 33s+179ms</span>
+	<span class='label start-time'>Mar 14, 2022 12:25:58 PM</span>
+	<span class='label end-time'>Mar 14, 2022 12:27:46 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 48s+50ms</span>
 </div>
 <div class='test-attributes'>
 	<div class='category-list'>
@@ -176,7 +175,15 @@
 		<tbody>
 			<tr class='log' status='fail'>
 				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>7:32:19 PM</td>
+				<td class='timestamp'>12:27:46 PM</td>
+				<td class='step-details'>
+						Test Failed
+					
+				</td>
+			</tr>
+			<tr class='log' status='fail'>
+				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
+				<td class='timestamp'>12:27:46 PM</td>
 				<td class='step-details'>
 						Test Failed
 					
@@ -184,20 +191,6 @@
 			</tr>
 		</tbody>
 	</table>
-</div>
-					</div>
-				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
-					<div class='test-heading'>
-						<span class='test-name'>Verify_SignUp_And_Onboard</span>
-						<span class='test-time'>Mar 12, 2022 07:32:20 PM</span>
-						<span class='test-status right pass'>pass</span>
-					</div>
-					<div class='test-content hide'>
-<div class='test-time-info'>
-	<span class='label start-time'>Mar 12, 2022 07:32:20 PM</span>
-	<span class='label end-time'>Mar 12, 2022 07:32:20 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 					</div>
 				</li>
@@ -263,7 +256,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Mar 12, 2022 07:26:46 PM</td>
+										<td>Mar 14, 2022 12:25:58 PM</td>
 										<td class='linked' test-id='1'>Verify_SignUp_And_Onboard</td>
 										<td><span class='test-status fail'>fail</span></td>
 									</tr>
@@ -323,7 +316,7 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>Mar 12, 2022 07:26:46 PM</td>
+										<td>Mar 14, 2022 12:25:58 PM</td>
 										<td class='linked' test-id='1'>Verify_SignUp_And_Onboard</td>
 										<td><span class='test-status fail'>fail</span></td>
 									</tr>
@@ -349,7 +342,7 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Tests
-					<div class='panel-lead'>2</div>
+					<div class='panel-lead'>1</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -361,19 +354,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Mar 12, 2022 07:26:46 PM</div>
+					<div class='panel-lead'>Mar 14, 2022 12:25:58 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Mar 12, 2022 07:32:31 PM</div>
+			 		<div class='panel-lead'>Mar 14, 2022 12:27:46 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 5m 44s+776ms</div>
+					<div class='panel-lead'>0h 1m 48s+314ms</div>
 				</div>
 			</div>
 			<div class='col s6'>
@@ -408,8 +401,8 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-                parentCount: 2,
-				passParent: 1,
+                parentCount: 1,
+				passParent: 0,
 				failParent: 1,
 				fatalParent: 0,
 				errorParent: 0,
@@ -440,7 +433,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Verify_SignUp_And_Onboard":333.179,"Verify_SignUp_And_Onboard":0
+			        "Verify_SignUp_And_Onboard":108.05
 			};
 		</script>
 	
